<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PartnerRegistrationActivity3">

    <androidx.cardview.widget.CardView
        android:layout_margin="16dp"
        android:elevation="8dp"

        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/text1Rl"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/CRTv"
                    android:text="Partner Registration :"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/darker_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
            </RelativeLayout>
            <LinearLayout
                android:padding="10dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:id="@+id/timeview"
                android:layout_below="@id/text1Rl"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/colorGrey"
                    app:cardCornerRadius="40dp"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_width="20dp"
                    android:layout_height="20dp">

                </androidx.cardview.widget.CardView>
                <View


                    android:background="@color/colorAccent"
                    android:layout_width="100dp"
                    android:layout_height="10dp">

                </View>
                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="40dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp">

                </androidx.cardview.widget.CardView>
                <View


                    android:background="@color/colorAccent"
                    android:layout_width="100dp"
                    android:layout_height="10dp">

                </View>
                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/colorGrey"
                    app:cardCornerRadius="40dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp">

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <RelativeLayout
                android:layout_below="@id/timeview"
                android:id="@+id/timeviewtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="Profile Details"
                    android:textSize="12dp"
                    android:id="@+id/profileDetails"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:text="Vehicle Details"
                    android:textSize="12dp"
                    android:id="@+id/VehicleDetails"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_toRightOf="@id/profileDetails"
                    android:layout_marginLeft="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:text="Preview And \n      Submit"
                    android:textSize="12dp"
                    android:id="@+id/PreviewAndSubmit"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_toRightOf="@id/VehicleDetails"
                    android:layout_marginLeft="38dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>



            </RelativeLayout>
            <RelativeLayout
                android:layout_below="@id/timeviewtext"
                android:id="@+id/detailsRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/tiltypeOfVehicle"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:layout_width="match_parent"
                app:boxStrokeWidth="1dp"
                app:boxBackgroundColor="#F0F0F0"
                app:boxStrokeColor="@color/colorAccent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiettypeofvhicle"
                android:hint="@string/which_type_of_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/tilDrivingNumber"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/tiltypeOfVehicle"
        android:layout_width="250dp"
        app:boxStrokeWidth="1dp"
        app:boxBackgroundColor="#F0F0F0"
        app:boxStrokeColor="@color/colorAccent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietdrvingNumber"
            android:hint="@string/driving_licence_number"
            android:layout_width="250dp"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>
            <androidx.cardview.widget.CardView
                android:layout_below="@id/tiltypeOfVehicle"
                android:layout_toRightOf="@id/tilDrivingNumber"
                android:backgroundTint="@color/colorGrey"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="30dp"


                android:layout_width="100dp"
                android:layout_height="40dp">
                <TextView
                    android:text="Choose File"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </TextView>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/tilvehcleNumber"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/tilDrivingNumber"
        android:layout_width="match_parent"
        app:boxStrokeWidth="1dp"
        app:boxBackgroundColor="#F0F0F0"
        app:boxStrokeColor="@color/colorAccent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietvehicleNumber"
            android:hint="@string/vehicle_number"
            
            android:layout_width="250dp"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
            <androidx.cardview.widget.CardView
                android:layout_below="@id/tilDrivingNumber"
                android:layout_toRightOf="@id/tilDrivingNumber"
                android:backgroundTint="@color/colorGrey"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="30dp"


                android:layout_width="100dp"
                android:layout_height="40dp">
                <TextView
                    android:text="Choose File"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </TextView>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    <Button
        android:text="Submit"
        android:layout_below="@id/detailsRL"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnSubmit"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Button>
</RelativeLayout>



    </androidx.cardview.widget.CardView>
</RelativeLayout>